Make ascii mode a mode of mmind i.o. a standalone program

--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,7 +1,7 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
-EXES := mmind mmind_asc
+EXES := mmind
 
 CLIBS_mmind := x_mng cutil X11
 
