Put code, mnemonic and text of errnos

--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -4,7 +4,7 @@ include $(TEMPLATES)/units.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
-EXES := $(filter-out t_smart_int t_ndbm, $(UNITS))
+EXES := $(filter-out t_smart_int, $(UNITS))
 
 CLIBS := x_mng cutil X11
 CLIBS_t_ndbm := cndbm gdbm \
@@ -16,6 +16,7 @@ CLIBS_t_channels := posix2pcre pcre
 CLIBS_t_regex_filters := posix2pcre pcre
 CLIBS_t_regexp := posix2pcre pcre
 CLIBS_t_string := posix2pcre pcre
+CLIBS_t_str_error := posix2pcre pcre
 CLIBS_t_xml_gen := posix2pcre pcre
 CLIBS_t_xml_string := posix2pcre pcre
 
