No error on clean

--- a/cots/linxtris-0.1a2/Makefile
+++ b/cots/linxtris-0.1a2/Makefile
@@ -1,9 +1,9 @@
 all:
 	gnatmake -O2 -gnatp src/linxtris.adb `gtkada-config` -bargs -shared -largs -s
 clean:
-	- rm *.o
-	- rm *.ali
-	- rm b~*
+	- rm -f *.o
+	- rm -f *.ali
+	- rm -f b~*
 clean_exe:
 	- rm linxtris
 clean_all: clean clean_exe
