Add Wake on WAN (and LAN?)

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -8,13 +8,14 @@ EXES := adand add_nums alook arbipas beep comp_vars ddir \
  mlbx_overflow one_of_arg pascal pingpong prime \
  random relay rndsok renamer \
  second stat statfile status strcase tcping trail_spaces udp_spy \
- wait xml_checker pingpong.stat tcping.stat udp_spy.stat xml_checker.stat
+ wait wake xml_checker pingpong.stat tcping.stat udp_spy.stat xml_checker.stat
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
 CLIBS_comp_vars := posix2pcre pcre
 CLIBS_dtd_checker := posix2pcre pcre
 CLIBS_relay := posix2pcre pcre
+CLIBS_wake := posix2pcre pcre
 CLIBS_xml_checker := posix2pcre pcre
 
 LARGS_tcping.stat := $(CPATHD)/libcutil.a
