--- a/usr/makefile
+++ b/usr/makefile
@@ -1,8 +1,8 @@
 include $(HOME)/Makefiles/common.mk
-SUBDIRS := dictio fifos pipe \
+SUBDIRS := dictio fifos mcd pipe \
  account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
- great_circle heart hungar lsadeps lem mcd misc mmind navig nimmari pexec \
+ great_circle heart hungar lsadeps lem mcd mmind navig nimmari pexec \
  renardeau simusi sokoban tasks tcpchat tests xwords
 
 include $(TEMPLATES)/dir.mk
