--- a/usr/makefile
+++ b/usr/makefile
@@ -2,7 +2,7 @@ include $(HOME)/Makefiles/common.mk
 SUBDIRS := dictio fifos mcd pipe \
  account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
- great_circle heart hungar lsadeps lem mcd mmind navig nimmari pexec \
+ great_circle heart hungar lsadeps lem misc mmind navig nimmari pexec \
  renardeau simusi sokoban tasks tcpchat tests xwords
 
 include $(TEMPLATES)/dir.mk
