--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -7,7 +7,7 @@ CLIBS := cutil
 CLIBS_enigma := posix2pcre pcre
 CLIBS_def_enigma := posix2pcre pcre
 
-TEXI=Enigma
+TEXI := Enigma
 
 include $(TEMPLATES)/ada.mk
 
