Use ascciidoc instead of makeinfo

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -18,7 +18,7 @@ CLIBS_clear_screen := cutil
 HTML := true
 GNATHTMLOPT := -d
 
-TEXI := REPOSIT_LIST
+TXT := REPOSIT_LIST
 
 include $(TEMPLATES)/ada.mk
 
