--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -10,7 +10,7 @@ CLIBS_als := posix2pcre pcre
 LARGS_als.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE)/libpcre.a
 
-TEXI := Als
+TXT := Als
 
 include $(TEMPLATES)/ada.mk
 
