Allow retrieving unparsed entities after parsing with callback Add xml_checker documentation

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -27,5 +27,7 @@ LARGS_dtd_checker.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
 LARGS_xml_checker.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE)/libpcre.a
 
+TXT := Xml_Checker
+
 include $(TEMPLATES)/ada.mk
 
