--- a/usr/makefile
+++ b/usr/makefile
@@ -3,7 +3,7 @@ SUBDIRS := dictio fifos mcd pipe \
  account agite als approx astub asubst c_magic chess code day_of_week \
  enigma fl \
  great_circle heart hungar lsadeps lem misc mmind navig nimmari pexec \
- renardeau simusi sokoban tasks tcpchat tests xwords
+ renardeau simusi sokoban tasks tcpchat tcpipe tests xwords
 
 include $(TEMPLATES)/dir.mk
 
