Start a user guide

--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -10,7 +10,8 @@ CLIBS_agite := posix2pcre pcre
 LARGS_agite.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
   $(CPATHD)/libposix2pcre.a $(PCRE)/libpcre.a -lX11
 
-TXT := Specs
+TXT := Agite
+DOCOPTS_Agite := -a toc
 
 include $(TEMPLATES)/ada.mk
 
