--- a/usr/great_circle/makefile
+++ b/usr/great_circle/makefile
@@ -2,6 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
+AFPX_XREF := afpx_xref
 EXES := gc
 
 CLIBS := x_mng cutil X11
