--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -2,6 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 AFPX := true
+AFPX_XREF := afpx_xref
 EXES := xwords words_check t_analist
 
 CLIBS_xwords := x_mng cutil X11
