Got rid of My_Io

--- a/usr/tasks/makefile
+++ b/usr/tasks/makefile
@@ -5,5 +5,7 @@ include $(HOME)/Makefiles/units.mk
 ADAVIEW := $(REPOSIT)
 EXES := $(UNITS)
 
+CLIBS_servprio := cutil
+
 include $(TEMPLATES)/ada.mk
 
