Use -a toc attibute i.o. :toc:

--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -12,6 +12,7 @@ LARGS_agite.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
   $(CPATHD)/libposix2pcre.a $(PCRE)/libpcre.a -lX11
 
 TXT := Agite
+DOCOPTS_Agite= -a toc
 
 include $(TEMPLATES)/ada.mk
 
