--- a/usr/enigma/makefile
+++ b/usr/enigma/makefile
@@ -8,6 +8,7 @@ CLIBS_enigma := posix2pcre pcre
 CLIBS_def_enigma := posix2pcre pcre
 
 TXT := Enigma
+DOCOPTS_Enigma := -a toc
 
 include $(TEMPLATES)/ada.mk
 
