Stat is Unix tool

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -4,11 +4,11 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 AFPX_XREF := afpx_xref
 
-EXES := adand add_nums alook arbipas beep comp_vars ddir \
+EXES := adand add_nums alook arbipas astat beep comp_vars ddir \
  dtd_checker dtd_checker.stat e2f fact full_path g hanoi impot_04 \
  mlbx_overflow one_of_arg pascal pingpong prime \
  random relay rndsok renamer \
- second stat statfile status strcase tcping trail_spaces udp_spy \
+ second statfile status strcase tcping trail_spaces udp_spy \
  wait wake xml_checker pingpong.stat tcping.stat tcp_spy udp_spy.stat \
  xml_checker.stat
 
