--- a/c/makefile
+++ b/c/makefile
@@ -4,16 +4,16 @@ LIBS := libcutil libx_mng libposix2pcre
 DBM := $(wildcard /usr/include/gdbm/ndbm.h /usr/include/gdbm-ndbm.h)
 ifneq ($(DBM),)
 LIBS += libcndbm
-OBJS_libcndbm := cndbm.o
+OBJS_libcndbm := cndbm
 endif
 EXES := test_x
 
-OBJS_libcutil := timeval.o sys_calls.o wait_evt.o socket.o socket_afux.o
-OBJS_libposix2pcre := posix2pcre.o
-OBJS_libx_mng := x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o \
-                 x_screen.o
+OBJS_libcutil := timeval sys_calls wait_evt socket socket_afux
+OBJS_libposix2pcre := posix2pcre
+OBJS_libx_mng := x_color x_font x_line x_export x_file x_key x_screen
 
-LARGS_test_x := ./lib_Linux/libx_mng.so ./lib_Linux/libcutil.so -lX11
+LIBS_test_x := libx_mng libcutil 
+LARGS_test_x := -lX11
 
 DEST_LIBS := /usr/local/lib
 INST_LIBS = $(LIBS)
