--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -1,8 +1,11 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
 AFPX := true
 AFPX_XREF := afpx_xref
+
+SUBUNITS := menu2-menu21 resol-r_compute
 EXES := approxp import export
 
 CLIBS := x_mng cutil X11
