--- a/usr/c_magic/makefile
+++ b/usr/c_magic/makefile
@@ -1,6 +1,8 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
+SUBUNITS := common-check
 EXES := c_magic
 
 include $(TEMPLATES)/ada.mk
