--- a/usr/chess/makefile
+++ b/usr/chess/makefile
@@ -2,7 +2,12 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 
+SUBUNITS := pieces-actions_of_bishop pieces-actions_of_king \
+pieces-actions_of_knight pieces-actions_of_pawn pieces-actions_of_queen \
+pieces-actions_of_rook screen-text screen-moves screen-graphic-bitmaps \
+screen-graphic
 EXES := chess
+
 CLIBS := x_mng cutil X11
 
 GITIGNORE := Default.chs
