--- a/usr/lem/makefile
+++ b/usr/lem/makefile
@@ -1,6 +1,8 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
+SUBUNITS := screen-get_event
 EXES := land_lem
 
 CLIBS := x_mng cutil X11
