--- a/usr/mcd/makefile
+++ b/usr/mcd/makefile
@@ -2,6 +2,9 @@ include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
 
+SUBUNITS := mcd_mng-call_stack mcd_mng-operations mcd_mng-dates \
+mcd_mng-registers mcd_mng-file mcd_mng-stack mcd_mng-ios mcd_mng-strings \
+mcd_mng-misc
 EXES := mcd
 
 CLIBS := cutil
