--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,6 +1,8 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
+SUBUNITS := action-treat_click action-treat_release
 EXES := mmind
 
 CLIBS_mmind := x_mng cutil X11
