--- a/usr/sokoban/makefile
+++ b/usr/sokoban/makefile
@@ -1,6 +1,8 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
+SUBUNITS := sok_manager-sok_file sok_manager-sok_menu
 EXES := sokoban
 
 CLIBS := x_mng cutil X11
