--- a/usr/renardeau/makefile
+++ b/usr/renardeau/makefile
@@ -1,8 +1,11 @@
 include $(HOME)/Makefiles/common.mk
 
 ADAVIEW := $(REPOSIT)
+
 AFPX := true
 AFPX_XREF := afpx_xref
+
+SUBUNITS := renardeau-x
 EXES := renardeau
 
 CLIBS := x_mng cutil X11
