--- a/usr/makefile
+++ b/usr/makefile
@@ -1,7 +1,7 @@
 include $(HOME)/Makefiles/common.mk
 SUBDIRS := dictio fifos pipe \
- account agite als approx astub asubst c_magic chess code day_of_week \
- enigma fl \
+ account agite als approx astub asubst battleship c_magic chess code \
+ day_of_week enigma fl \
  great_circle heart hungar lsadeps lem mcd misc mmind navig nimmari pexec \
  renardeau simusi sokoban tasks tcpchat tcpipe tests xwords
 
