--- a/usr/battleship/makefile
+++ b/usr/battleship/makefile
@@ -5,9 +5,9 @@ ADAVIEW := $(REPOSIT)
 AFPX := true
 AFPX_XREF := afpx_xref
 
-EXES := 
+EXES := battleship
 
-CLIBS := cutil
+CLIBS :=  posix2pcre pcre x_mng cutil X11
 
 TXT := BattleShip
 DOCOPTS_Asubst := -a toc
