Port on gcc 4.6

--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -9,7 +9,7 @@ EXES := $(filter-out t_smart_int, $(UNITS))
 
 CLIBS := x_mng cutil X11
 CLIBS_t_ndbm := cndbm gdbm \
- $(patsubst /usr/lib/lib%.so, %, $(wildcard /usr/lib/libgdbm_compat.so))
+ $(patsubst /usr/lib/$(ARCH)/lib%.so, %, $(wildcard /usr/lib/$(ARCH)/libgdbm_compat.so))
 CLIBS_t_async := posix2pcre pcre
 CLIBS_t_autobus := posix2pcre pcre
 CLIBS_t_byte_to_unicode := posix2pcre pcre
