Use Text_Char.Open_All / Close_All

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -2,7 +2,7 @@ include $(HOME)/Makefiles/common.mk
 
 SUBUNITS := afpx-af_dscr afpx-af_list afpx-af_ptg afpx_bld-xref \
   autobus-config channels-file pattern-storage \
-  xml_parser-file_mng xml_parser-parse_mng \
+  xml_parser-parse_mng \
   xml_parser-parse_mng-dtd xml_parser-parse_mng-entity_mng \
   xml_parser-parse_mng-namespaces \
   xml_parser-parse_mng-resolve_uri xml_parser-parse_mng-util \
