--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -12,7 +12,7 @@ CLIBS := x_mng cutil X11
 CLIBS_agite := posix2pcre pcre
 
 LARGS_agite.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
-  $(CPATHD)/libposix2pcre.a $(PCRE)/libpcre.a -lX11
+  $(CPATHD)/libposix2pcre.a $(PCRE_LIB)/libpcre.a -lX11
 
 TXT := Agite
 DOCOPTS_Agite= -a toc
