--- a/usr/battleship/makefile
+++ b/usr/battleship/makefile
@@ -10,7 +10,7 @@ EXES := battleship battleship.stat
 CLIBS := x_mng cutil posix2pcre pcre X11
 
 LARGS_battleship.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
- $(CPATHD)/libposix2pcre.a $(PCRE)/libpcre.a -lX11
+ $(CPATHD)/libposix2pcre.a $(PCRE_LIB)/libpcre.a -lX11
 
 TXT := BattleShip
 DOCOPTS_Asubst := -a toc
