--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -9,7 +9,7 @@ CLIBS := cutil
 CLIBS_asubst := posix2pcre pcre
 
 LARGS_asubst.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
-  $(PCRE)/libpcre.a
+  $(PCRE_LIB)/libpcre.a
 
 TXT := Asubst History
 DOCOPTS_Asubst := -a toc
