--- a/usr/sokoban/makefile
+++ b/usr/sokoban/makefile
@@ -3,7 +3,7 @@ include $(HOME)/Makefiles/common.mk
 ADAVIEW := $(REPOSIT)
 
 SUBUNITS := sok_manager-sok_file sok_manager-sok_menu
-EXES := sokoban
+EXES := sokoban scores
 
 CLIBS := x_mng cutil X11
 
