--- a/cots/makefile
+++ b/cots/makefile
@@ -1,4 +1,5 @@
-include $(HOME)/Makefiles/common.mk
+include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
+
 SUBDIRS := pragmarc mine linxtris-0.1a2
 
 include $(TEMPLATES)/dir.mk
