--- a/cots/mine/makefile
+++ b/cots/mine/makefile
@@ -1,5 +1,5 @@
 # For Mine Detector 6.0
-include $(HOME)/Makefiles/common.mk
+include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 
 ADAVIEW := $(HOME)/ada/cots/pragmarc
 ADAWARN := false
