--- a/usr/lsadeps/makefile
+++ b/usr/lsadeps/makefile
@@ -12,7 +12,7 @@ LARGS_lsadeps.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
   $(PCRE_LIB)/libpcre.a
 
 TXT := Lsadeps
-DOCOPTS_TXT := -a toc
+DOCOPTS_Lsadeps := -a toc
 
 include $(TEMPLATES)/ada.mk
 
