--- a/usr/agite/makefile
+++ b/usr/agite/makefile
@@ -10,6 +10,7 @@ EXES := agite agite.stat t_git
 
 CLIBS := x_mng cutil X11
 CLIBS_agite := posix2pcre pcre
+CLIBS_t_git := posix2pcre pcre
 
 LARGS_agite.stat := $(CPATHD)/libx_mng.a $(CPATHD)/libcutil.a \
   $(CPATHD)/libposix2pcre.a $(PCRE_LIB)/libpcre.a -lX11
