--- a/usr/asubst/makefile
+++ b/usr/asubst/makefile
@@ -6,10 +6,11 @@ SUBUNITS := replace_pattern-file_content replace_pattern-shell_command
 EXES := asubst asubst.stat
 
 CLIBS := cutil
-CLIBS_asubst := posix2pcre pcre
+LARGS_asubst := -L$(PCRE_LIB)
+CLIBS_asubst = posix2pcre $(PCRE_LIBS)
 
 LARGS_asubst.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
-  $(PCRE_LIB)/libpcre.a
+                     $(PCRE_ALIBS)
 
 TXT := Asubst
 DOCOPTS_Asubst := -a toc
