--- a/usr/lsadeps/makefile
+++ b/usr/lsadeps/makefile
@@ -6,10 +6,11 @@ SUBUNITS := lsadeps-add_paths
 EXES := lsadeps lsadeps.stat
 
 CLIBS := cutil
-CLIBS_lsadeps := posix2pcre pcre
+LARGS_lsadeps := -L$(PCRE_LIB)
+CLIBS_lsadeps := posix2pcre $(PCRE_LIBS)
 
 LARGS_lsadeps.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
-  $(PCRE_LIB)/libpcre.a
+  $(PCRE_ALIBS)
 
 TXT := Lsadeps
 DOCOPTS_Lsadeps := -a toc
