--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -16,20 +16,20 @@ EXES := adand add_nums alook arbipas astat azf beep comp_vars ddir \
 
 CLIBS := cutil
 CLIBS_renamer := x_mng X11
-CLIBS_comp_vars := posix2pcre pcre
-CLIBS_dtd_checker := posix2pcre pcre
-CLIBS_relay := posix2pcre pcre
-CLIBS_wake := posix2pcre pcre
-CLIBS_xml_checker := posix2pcre pcre
+CLIBS_comp_vars := posix2pcre $(PCRE_LIBS)
+CLIBS_dtd_checker := posix2pcre $(PCRE_LIBS)
+CLIBS_relay := posix2pcre $(PCRE_LIBS)
+CLIBS_wake := posix2pcre $(PCRE_LIBS)
+CLIBS_xml_checker := posix2pcre $(PCRE_LIBS)
 
 LARGS_astat.stat := $(CPATHD)/libcutil.a
 LARGS_tcping.stat := $(CPATHD)/libcutil.a
 LARGS_udp_spy.stat := $(CPATHD)/libcutil.a
 LARGS_pingpong.stat := $(CPATHD)/libcutil.a
 LARGS_dtd_checker.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
-  $(PCRE_LIB)/libpcre.a
+  $(PCRE_ALIBS)
 LARGS_xml_checker.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a \
-  $(PCRE_LIB)/libpcre.a
+  $(PCRE_ALIBS)
 
 TXT := Xml_Checker
 DOCOPTS_Xml_Checker := -a toc
