--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -6,9 +6,9 @@ SUBUNITS := als-parse_date als-set_criteria
 EXES := als als.stat
 
 CLIBS := cutil
-CLIBS_als := posix2pcre $(PCRE_LIBS)
+CLIBS_als := $(PCRE_SLIBS)
 
-LARGS_als.stat := $(CPATHD)/libcutil.a $(CPATHD)/libposix2pcre.a $(PCRE_ALIBS)
+LARGS_als.stat := $(CPATHD)/libcutil.a $(PCRE_ALIBS)
 
 TXT := Als
 DOCOPTS_Als := -a toc
