--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -8,7 +8,7 @@ AFPX_XREF := afpx_xref
 SUBUNITS := menu2-menu21 resol-r_compute
 EXES := approxp import export
 
-CLIBS := x_mng cutil X11
+CLIBS := $(X11_SLIBS)
 
 include $(TEMPLATES)/ada.mk
 
