--- a/usr/xwords/makefile
+++ b/usr/xwords/makefile
@@ -7,8 +7,8 @@ AFPX_XREF := afpx_xref
 
 EXES := xwords words_check t_analist
 
-CLIBS_xwords := x_mng cutil X11
-CLIBS := cutil
+CLIBS_xwords := $(X11_SLIBS)
+CLIBS := $(UTILS_SLIBS)
 
 include $(TEMPLATES)/ada.mk
 
