--- a/usr/makefile
+++ b/usr/makefile
@@ -1,9 +1,8 @@
 include $(if $(MAKFILES_DIR), $(MAKFILES_DIR), $(HOME)/Makefiles)/common.mk
 SUBDIRS := dictio fifos pipe \
- account agite als approx astub asubst battleship c_magic chess code \
- day_of_week enigma fl \
+ account agite als approx astub asubst battleship c_magic chess code enigma fl \
  great_circle heart hungar lsadeps lem mcd misc mmind navig nimmari pexec \
- renardeau simusi sokoban tasks tcpchat tcpipe tests xwords
+ renardeau simusi sokoban tasks tcpchat tcpipe tests xml xwords
 
 include $(TEMPLATES)/dir.mk
 
