Ensure that discarded nodes are dead end Design doc in progress

--- a/usr/xml/makefile
+++ b/usr/xml/makefile
@@ -17,7 +17,7 @@ LARGS_dtd_checker.stat := $(PCRE_ALIBS) $(UTILS_ALIBS)
 LARGS_dtd_generator.stat := $(PCRE_ALIBS) $(UTILS_ALIBS)
 LARGS_xml_checker.stat := $(PCRE_ALIBS) $(UTILS_ALIBS)
 
-TXT := Xml_Checker
+TXT := Xml_Checker Dtd_Generator
 DOCOPTS_Xml_Checker := -a toc
 
 include $(TEMPLATES)/ada.mk
