--- a/usr/chess/makefile
+++ b/usr/chess/makefile
@@ -6,9 +6,11 @@ SUBUNITS := pieces-actions_of_bishop pieces-actions_of_king \
 pieces-actions_of_knight pieces-actions_of_pawn pieces-actions_of_queen \
 pieces-actions_of_rook screen-text screen-moves screen-graphic-bitmaps \
 screen-graphic
-EXES := chess
+EXES := chess chess.stat
 
 CLIBS := $(X11_SLIBS)
+LARGS_chess.stat := $(X11_ALIBS)
+
 
 GITIGNORE := Default.chs
 
