--- a/usr/tests/makefile
+++ b/usr/tests/makefile
@@ -12,6 +12,7 @@ CLIBS_t_ndbm := cndbm gdbm \
  $(patsubst /usr/lib/$(ARCH)/lib%.so, %, $(wildcard /usr/lib/$(ARCH)/libgdbm_compat.so))
 CLIBS_t_async := $(PCRE_SLIBS)
 CLIBS_t_autobus := $(PCRE_SLIBS)
+CLIBS_t_bencode := $(PCRE_SLIBS)
 CLIBS_t_byte_to_unicode := $(PCRE_SLIBS)
 CLIBS_t_channels := $(PCRE_SLIBS)
 CLIBS_t_delta_date := $(PCRE_SLIBS)
