--- a/usr/als/makefile
+++ b/usr/als/makefile
@@ -8,7 +8,7 @@ EXES := als als.stat
 CLIBS := $(UTILS_SLIBS)
 CLIBS_als := $(PCRE_SLIBS)
 
-LARGS_als.stat := $(PCRE_ALIBS) $(X11_ALIBS)
+LARGS_als.stat := $(PCRE_ALIBS) $(UTILS_ALIBS)
 
 TXT := Als
 DOCOPTS_Als := -a toc
