Store points in ASCII

--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -6,7 +6,7 @@ AFPX := true
 AFPX_XREF := afpx_xref
 
 SUBUNITS := menu2-menu21 resol-r_compute
-EXES := approxp import export
+EXES := approxp
 
 CLIBS := $(X11_SLIBS)
 
