Use native random generator or Urand on option

--- a/reposit/makefile
+++ b/reposit/makefile
@@ -15,6 +15,8 @@ PARGS_assertion.apb := # NoAssert
 PARGS_lz4.apb :=  # Debug
 PARGS_lzf.apb :=  # Debug # Fast | Slow # LocalTrace
 PARGS_snappy.apb := # Debug
+PARGS_rnd.aps := Urand
+PARGS_rnd.apb := Urand
 CLIBS_app = $(UTILS_SLIBS) $(PCRE_SLIBS)
 CLIBS_afpx_bld = $(PCRE_SLIBS) $(X11_SLIBS)
 CLIBS_afpx_rnb = $(PCRE_SLIBS) $(X11_SLIBS)
